--- a/A_Measure_of_Linear_Relationship.ipynb
+++ b/A_Measure_of_Linear_Relationship.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#A-Measure-of-Linear-Relationship\" data-toc-modified-id=\"A-Measure-of-Linear-Relationship-1\">A Measure of Linear Relationship</a></span><ul class=\"toc-item\"><li><span><a href=\"#Pearson’s-product-moment-correlation-with-Jupyter-Notebook\" data-toc-modified-id=\"Pearson’s-product-moment-correlation-with-Jupyter-Notebook-1.1\">Pearson’s product-moment correlation with Jupyter Notebook</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Import-necessary-libraries\" data-toc-modified-id=\"Import-necessary-libraries-3\">Import necessary libraries</a></span></li><li><span><a href=\"#Finding-the-regression-line\" data-toc-modified-id=\"Finding-the-regression-line-4\">Finding the regression line</a></span></li><li><span><a href=\"#Finding-the-Pearson's-correlation-coefficient\" data-toc-modified-id=\"Finding-the-Pearson's-correlation-coefficient-5\">Finding the Pearson's correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#For-population-data\" data-toc-modified-id=\"For-population-data-5.1\">For population data</a></span></li><li><span><a href=\"#For-sample-data\" data-toc-modified-id=\"For-sample-data-5.2\">For sample data</a></span></li></ul></li><li><span><a href=\"#Finding-mathematically\" data-toc-modified-id=\"Finding-mathematically-6\">Finding mathematically</a></span><ul class=\"toc-item\"><li><span><a href=\"#Finding-r-mathematically\" data-toc-modified-id=\"Finding-r-mathematically-6.1\">Finding r mathematically</a></span></li></ul></li><li><span><a href=\"#Degree-of-freedom-and-critical-values\" data-toc-modified-id=\"Degree-of-freedom-and-critical-values-7\">Degree of freedom and critical values</a></span></li><li><span><a href=\"#The-least-squares-regression-line\" data-toc-modified-id=\"The-least-squares-regression-line-8\">The least-squares regression line</a></span></li><li><span><a href=\"#The-mean-point-on-the-line-of-best-fit\" data-toc-modified-id=\"The-mean-point-on-the-line-of-best-fit-9\">The mean point on the line of best fit</a></span></li><li><span><a href=\"#Real-life-example\" data-toc-modified-id=\"Real-life-example-10\">Real-life example</a></span></li><li><span><a href=\"#Finding-r-from-more-than-two-arrays\" data-toc-modified-id=\"Finding-r-from-more-than-two-arrays-11\">Finding r from more than two arrays</a></span></li><li><span><a href=\"#Heat-map\" data-toc-modified-id=\"Heat-map-12\">Heat map</a></span></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-13\">Conclusion</a></span></li><li><span><a href=\"#Reference\" data-toc-modified-id=\"Reference-14\">Reference</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# A Measure of Linear Relationship\n",
@@ -19,9 +29,7 @@
     "Bivariate data involves two types of related data. Pearson's product-moment correlation coefficient tells you how linearly these two data are related.\n",
     "We can display the collected data on a scatter plot. The horizontal axis is called the x-axis and we call the coordinate of x-axis the independent variable. The vertical axis is called the y-axis and we call the coordinate of y-axis the dependent variable.\n",
     "\n",
-    "I downloaded the data from this [link](https://stats.oecd.org/Index.aspx?DataSetCode=HOUSE_PRICES).\n",
-    "\n",
-    "And you can see all the codes [here](http://bit.ly/2Pdv6Fj)."
+    "I downloaded the data from this [link](https://stats.oecd.org/Index.aspx?DataSetCode=HOUSE_PRICES)."
    ]
   },
   {
@@ -231,16 +239,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "`linregress` returns slope, intercept, r_value and p-value."
    ]
@@ -351,12 +349,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Finding mathematically\n",
+    "\n",
     "Let's use sample data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://gist.github.com/shinokada/dbe2f88096dea97a412ed05eb725adb2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +417,7 @@
        "loss  4  12  17"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,8 +441,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://gist.github.com/shinokada/51ae8c66507b6d0ade544ad132da87e0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -459,26 +479,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.943920288775949\n",
-      "5.354126134736337\n",
-      "8.666666666666666\n",
-      "28.666666666666664\n"
+      "3.605551275463989\n",
+      "6.557438524302\n"
      ]
     }
    ],
    "source": [
-    "gain_std, loss_std = df.T.std(ddof=0)\n",
+    "gain_std, loss_std = df.T.std(ddof=1)\n",
     "print(gain_std)\n",
-    "print(loss_std)\n",
-    "print(gain_std**2)\n",
-    "print(loss_std**2)"
+    "print(loss_std)"
    ]
   },
   {
@@ -489,139 +512,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Understanding numpy covariance matrix\n",
-    "\n",
-    "When you use `numpy.cov`, it returns a covariance matrix. It is a square matrix. The covariance matrix element $C_{ij}$ is the covariance of $x$ and $y$. The element $C_{ii}$ is the variance of $x_i$.\n",
-    "\n",
-    "For example if you calculate covariance of two s:\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 8.66666667 14.66666667]\n",
-      " [14.66666667 28.66666667]]\n",
-      "[ 8.66666667 28.66666667]\n"
-     ]
-    }
-   ],
-   "source": [
-    "cov_xy=np.cov([num[0],num[1]],ddof=0)\n",
-    "print(cov_xy)\n",
-    "print(np.var(x, axis=1, ddof=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.82476212, 1.39575128],\n",
-       "       [1.39575128, 2.72805933]])"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import math\n",
-    "\n",
-    "cov_xy/(gain_std * loss_std)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Mathematically\n",
-    "\n",
-    "$$\n",
-    "\\frac{(5-8)(4-11)+(7-8)(12-11)+(12-8)(17-11)}{3}=14.67 \\\\\n",
-    "\\frac{14.67}{15.76}=0.9305\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14.666666666666666\n",
-      "15.762120556715852\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.9305008557631899"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "m_cov=((5.0-8)*(4.0-11)+(7.0-8)*(12.0-11)+(12.0-8)*(17.0-11))/3.0\n",
-    "print(m_cov)\n",
-    "\n",
-    "sxsy=gain_std*loss_std\n",
-    "print(sxsy)\n",
-    "\n",
-    "m_cov/sxsy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Creating arrays from the dataFrame."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 5  7 12]\n",
-      "[ 4 12 17]\n"
-     ]
-    }
-   ],
-   "source": [
-    "num = df.to_numpy()\n",
-    "print(num[0])\n",
-    "print(num[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -670,15 +562,76 @@
        "loss  22.0  43.0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "df.T.cov()"
+    "cov_xy=df.T.cov()\n",
+    "cov_xy"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding r mathematically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.93050085576319"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov_xy.iloc[0,1]/(gain_std*loss_std)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating arrays from the dataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5  7 12]\n",
+      "[ 4 12 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = df.to_numpy()\n",
+    "print(num[0])\n",
+    "print(num[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -700,6 +653,13 @@
     "from numpy import corrcoef\n",
     "corrcoef(num[0],num[1])[0,1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -750,20 +710,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r: {r:.4f}, p-value: {pval:.4f}\n"
+      "r: 0.9305, p-value: 0.2387\n"
      ]
     }
    ],
    "source": [
-    "r, pval = pearsonr(df_x,df_y)\n",
-    "print('r: {r:.4f}, p-value: {pval:.4f}')"
+    "r, pval = pearsonr(df.iloc[0,:],df.iloc[1,:])\n",
+    "print(f'r: {r:.4f}, p-value: {pval:.4f}')"
    ]
   },
   {
@@ -1935,13 +1895,18 @@
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "195.8px"
+   },
    "toc_section_display": true,
    "toc_window_display": false
   }
