--- a/Standard_Deviation_Variance & Covariance.ipynb
+++ b/Standard_Deviation_Variance & Covariance.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Everything-you-need-to-know-about-Variance\" data-toc-modified-id=\"Everything-you-need-to-know-about-Variance-1\">Everything you need to know about Variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variance-for-beginners\" data-toc-modified-id=\"Variance-for-beginners-1.1\">Variance for beginners</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Sample-variance\" data-toc-modified-id=\"Sample-variance-3\">Sample variance</a></span></li><li><span><a href=\"#Standard-variance\" data-toc-modified-id=\"Standard-variance-4\">Standard variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#TI-nspire\" data-toc-modified-id=\"TI-nspire-4.1\">TI-nspire</a></span></li></ul></li><li><span><a href=\"#Covariance\" data-toc-modified-id=\"Covariance-5\">Covariance</a></span></li><li><span><a href=\"#Correlation\" data-toc-modified-id=\"Correlation-6\">Correlation</a></span></li><li><span><a href=\"#ddof-in-Pandas-and-Numpy-are-different\" data-toc-modified-id=\"ddof-in-Pandas-and-Numpy-are-different-7\">ddof in Pandas and Numpy are different</a></span></li><li><span><a href=\"#Investigating-Pandas-and-Numpy-ddof\" data-toc-modified-id=\"Investigating-Pandas-and-Numpy-ddof-8\">Investigating Pandas and Numpy ddof</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Everything-you-need-to-know-about-Variance\" data-toc-modified-id=\"Everything-you-need-to-know-about-Variance-1\">Everything you need to know about Variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variance-for-beginners\" data-toc-modified-id=\"Variance-for-beginners-1.1\">Variance for beginners</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Sample-variance\" data-toc-modified-id=\"Sample-variance-3\">Sample variance</a></span></li><li><span><a href=\"#Standard-variance\" data-toc-modified-id=\"Standard-variance-4\">Standard variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#TI-nspire\" data-toc-modified-id=\"TI-nspire-4.1\">TI-nspire</a></span></li></ul></li><li><span><a href=\"#Covariance\" data-toc-modified-id=\"Covariance-5\">Covariance</a></span></li><li><span><a href=\"#Correlation\" data-toc-modified-id=\"Correlation-6\">Correlation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Investgating-Numpy-and-Pandas-ddof\" data-toc-modified-id=\"Investgating-Numpy-and-Pandas-ddof-6.1\">Investgating Numpy and Pandas ddof</a></span></li><li><span><a href=\"#Understanding-numpy-covariance-matrix\" data-toc-modified-id=\"Understanding-numpy-covariance-matrix-6.2\">Understanding numpy covariance matrix</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -260,62 +260,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ddof in Pandas and Numpy are different\n",
-    "\n",
-    "\n",
-    "When you find the variance and standard deviation, Numpy and Pandas' default `ddof` are different.\n",
-    "\n"
+    "## Investgating Numpy and Pandas ddof"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gain</th>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loss</th>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0   1   2\n",
+       "gain  5   7  12\n",
+       "loss  4  12  17"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(\n",
+    "    [\n",
+    "        [5,7,12],\n",
+    "        [4,12,17]\n",
+    "    ],\n",
+    "    index=['gain','loss'])\n",
+    "df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Investigating Pandas and Numpy ddof\n",
+    "Mathematically\n",
+    "\n",
+    "$$\n",
+    "\\frac{(5-8)(4-11)+(7-8)(12-11)+(12-8)(17-11)}{3}=14.67 \\\\\n",
+    "\\frac{14.67}{15.76}=0.9305\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Understanding numpy covariance matrix\n",
+    "\n",
+    "When you use `numpy.cov`, it returns a covariance matrix. It is a square matrix. The covariance matrix element $C_{ij}$ is the covariance of $x$ and $y$. The element $C_{ii}$ is the variance of $x_i$.\n",
+    "\n",
+    "For example if you calculate covariance of two s:\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 88,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numpy std default: 1.9820624179302297\n",
-      "Numpy std default: 1.927248223318863\n",
-      "Numpy std ddof=0: 1.9820624179302297\n",
-      "Numpy std ddof=0: 1.927248223318863\n",
-      "Numpy std ddof=1: 2.140872096444188\n",
-      "Numpy std ddof=1: 2.0816659994661326\n"
+      "[[ 8.66666667 14.66666667]\n",
+      " [14.66666667 28.66666667]]\n",
+      "[ 8.66666667 28.66666667]\n"
      ]
     }
    ],
    "source": [
-    "s_x=np.std(r_x)\n",
-    "s_y=np.std(r_y)\n",
-    "s_x0=np.std(r_x,ddof=0)\n",
-    "s_y0=np.std(r_y,ddof=0)\n",
-    "s_x1=np.std(r_x,ddof=1)\n",
-    "s_y1=np.std(r_y,ddof=1)\n",
-    "\n",
-    "print(f'Numpy std default: {s_x}')\n",
-    "print(f'Numpy std default: {s_y}')\n",
-    "print(f'Numpy std ddof=0: {s_x0}')\n",
-    "print(f'Numpy std ddof=0: {s_y0}')\n",
-    "print(f'Numpy std ddof=1: {s_x1}')\n",
-    "print(f'Numpy std ddof=1: {s_y1}')"
+    "cov_xy=np.cov([num[0],num[1]],ddof=0)\n",
+    "print(cov_xy)\n",
+    "print(np.var(x, axis=1, ddof=0))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
